syntax = "proto3";
option java_multiple_files = true;
package org.flavio.server;

service ListControl{
rpc createUser(CreateUserRequest) returns (ConfirmationCreateUserResponse);
rpc modifyAccessLevel(ModifyUserAccessLevelRequest) returns (ConfirmationModifyAccessLevelResponse);
}

message CreateUserRequest{
string userName=1;
string password=2;
repeated string roles=3;
}

message ConfirmationCreateUserResponse{
bool success=1;
string message=2;
}

message DeleteUserRequest{
string userName=1;
}

message ModifyUserAccessLevelRequest{
string userName=1;
repeated string newRoles=2;
}

message ConfirmationDeleteUserResponse{
bool success=1;
string message=2;
}

message ConfirmationModifyAccessLevelResponse{
bool success=1;
string message=2;
}


